# MovieKnowledgeBase

./: .gitignore  DOC.md  DOC.me  LICENSE  README.md  app.py  app_dashboard.py  main.py  pyproject.toml  requirements.txt
movies_knowledge_base/: .gitignore  README.md  pipeline.py  pyproject.toml
movies_knowledge_base/config/: chroma_config.py
movies_knowledge_base/src/application/: enhanced_search.py  search.py  search_cloud.py  search_validator.py
movies_knowledge_base/src/data/: document_generator.py  vector_db.py
movies_knowledge_base/src/repository/: chroma_repository.py
movies_knowledge_base/src/services/: anomaly_detection.py  clustering.py  embedder.py  evaluate.py  visualizer.py
movies_knowledge_base/tests/: README.md  test_anomaly_detection.py  test_clustering.py  test_quality_classifier.py
