[project]
name = "movieknowledgebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=23.0.0",
    "chromadb>=0.4.0",
    "gradio[oauth]>=3.0",
    "huggingface-hub>=0.12",
    "matplotlib==3.8.4",
    "mypy>=1.0.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "pillow>=10.0.0",
    "plotly==5.22.0",
    "pytest>=7.0.0",
    "scikit-learn==1.3.2",
    "seaborn==0.13.2",
    "sentence-transformers>=3.0.0",
    "streamlit==1.37.0",
    "streamlit-chat>=0.1.0",
    "torch>=2.0.0",
    "tqdm==4.66.1",
    "umap-learn==0.5.6",
]
