[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | chroma_db
  | data
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movies-knowledge-base"
version = "1.0.0"
description = "Sistema Inteligente de Gestão de Documentos de Filmes"
authors = [{name = "Gabriel", email = "gabriel@example.com"}]
requires-python = ">=3.8"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "sentence-transformers>=3.0.0",
    "scikit-learn==1.3.2",
    "chromadb>=0.4.0",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "plotly==5.22.0",
    "umap-learn==0.5.6",
    "streamlit==1.37.0",
    "tqdm==4.66.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
